docs/0.19/_sources/modeling/gallery/spectral/plot_broken_powerlaw.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "modeling/gallery/spectral/plot_broken_powerlaw.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_spectral_plot_broken_powerlaw.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_spectral_plot_broken_powerlaw.py:


.. _broken-powerlaw-spectral-model:

Broken power law spectral model
===============================

This model parametrises a broken power law spectrum.

It is defined by the following equation:

.. math::
    \phi(E) = phi_0 \cdot \begin{cases}
                          \left( \frac{E}{E_0} \right)^{-\Gamma1} \rm{if} E < E_{break}\\
                          \left( \frac{E}{E_0} \right)^{-\Gamma2} \rm{otherwise}
                         \end{cases}
    

.. GENERATED FROM PYTHON SOURCE LINES 19-22

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 22-37

.. code-block:: default


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import BrokenPowerLawSpectralModel, Models, SkyModel

    energy_bounds = [0.1, 100] * u.TeV
    model = BrokenPowerLawSpectralModel(
        index1=1.5,
        index2=2.5,
        amplitude="1e-12 TeV-1 cm-2 s-1",
        ebreak="1 TeV",
    )
    model.plot(energy_bounds)
    plt.grid(which="both")




.. image-sg:: /modeling/gallery/spectral/images/sphx_glr_plot_broken_powerlaw_001.png
   :alt: plot broken powerlaw
   :srcset: /modeling/gallery/spectral/images/sphx_glr_plot_broken_powerlaw_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 38-41

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 41-46

.. code-block:: default


    model = SkyModel(spectral_model=model, name="broken-power-law-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: broken-power-law-model
        type: SkyModel
        spectral:
            type: BrokenPowerLawSpectralModel
            parameters:
            -   name: index1
                value: 1.5
            -   name: index2
                value: 2.5
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: ebreak
                value: 1.0
                unit: TeV






.. _sphx_glr_download_modeling_gallery_spectral_plot_broken_powerlaw.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_broken_powerlaw.py <plot_broken_powerlaw.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_broken_powerlaw.ipynb <plot_broken_powerlaw.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
